--- a/AlwaysCoffeeTime/AlwaysCoffeeTime.Web/Views/Productos/Index.cshtml
+++ b/AlwaysCoffeeTime/AlwaysCoffeeTime.Web/Views/Productos/Index.cshtml
@@ -7,9 +7,32 @@
 
 <h2>Productos</h2>
 
-@foreach (var producto in Model)
-{
-    <p>@producto.Codigo @producto.Descripcion @producto.Precio @producto.Categoria @producto.Existencia @producto.Activo</p>
-}
 
+<table class="table table-bordered table-hover">
+
+    <thead>
+        <tr>
+            <th>Codigo</th>
+            <th>Descripcion</th>
+            <th>Precio</th>
+            <th>Categoria</th>
+            <th>Existencia</th>
+            <th>Activo</th>
+        </tr>
+    </thead>
+
+    @foreach (var producto in Model)
+    {
+        <tr>
+            <td>@producto.Codigo</td>
+            <td>@producto.Descripcion</td>
+            <td>@producto.Precio</td>
+            <td>@producto.Categoria</td>
+            <td>@producto.Existencia</td>
+            <td>@producto.Activo</td>
+        </tr>
+    }
+
+   
+</table>
 
